--- a/style.css
+++ b/style.css
@@ -415,7 +415,62 @@ body::before {
     text-decoration: underline;
 }
 /* end perpus */
-
+/* contact */
+.contact {
+    width: 100%;
+}
+.contact h2, .contact p {
+    color: white;
+    text-align: center;
+}
+.pesan {
+    margin-left: 320px;
+    background-color: rgba(255, 255, 255, 1);
+    height: 500px;
+    padding-top: 2%;
+    margin-right: 2%;
+}
+.pesan h2, .pesan p {
+    color: rgb(0, 0, 0);
+}
+input {
+    float: left;
+    width: 45%;
+    margin: 30px;
+    margin-bottom: 0;
+    padding: 20px;
+    background-color: rgb(36, 30, 107);
+    border: 0;
+    color: white;
+}
+textarea {
+    float: right;
+    position: absolute;
+    width: 28%;
+    height: 185px;
+    margin-top: 30px;
+    padding: 20px;
+    background-color: rgb(36, 30, 107);
+    border: 0;
+    color: white;
+}
+::placeholder {
+    color: white;
+}
+input[type=submit] {
+    width: 40%;
+    margin: 5%;
+    margin-left: 33%;
+    padding: 20px;
+    background-color: rgb(36, 30, 107);
+    border: 0;
+    color: white;
+    border-radius: 1em/2em;
+}
+input[type=submit]:hover {
+    background-color: rgb(24, 20, 71);
+    transition: .3s;
+}
 /* contact2 */
 .contact2 {
     background-image: linear-gradient(
@@ -545,6 +600,41 @@ footer p {
         background-position-x: 0;
         margin-top: 50px;
     }
+    /* contact */
+    .contact {
+        width: 100%;
+    }
+    .pesan {
+        background-color: rgba(255, 255, 255, 1);
+        height: 750px;
+        margin: 50px 0 0 0;
+    }
+    .contact h2 {
+        margin-top: 0;
+        padding-top: 5%;
+    }
+    input {
+        width: 70%;
+        float: none;
+        margin-left: 9%;
+    }
+    textarea {
+        float: none;
+        width: 70%;
+        position: relative;
+        margin-left: 9%;
+    }
+    input[type=submit] {
+        width: 40%;
+        margin: 5%;
+        margin-left: 30%;
+        padding: 10px;
+        background-color: rgb(36, 30, 107);
+        border: 0;
+        color: white;
+        border-radius: 1em/2em;
+    }
+    /* end contact */
     /* contact2 */
     .contact2 {
         padding: 5%;
