--- a/style.css
+++ b/style.css
@@ -104,7 +104,8 @@ body::before {
     text-decoration: none;
     display: block;
     text-align: left;
-    border-right: 2px solid blue;
+    border-left: 2px solid blue;
+    margin-left: 5px;
   }
   
   /* Add a dark background on topnav links and the dropdown button on hover */
