--- a/style.css
+++ b/style.css
@@ -23,7 +23,21 @@ body::before {
     bottom: 0;
     z-index: -1;
 }
-
+.tombol svg {
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    padding: 5px;
+    box-shadow: 0 0 10px -1px black;
+    border-radius: 50%;
+    box-sizing: border-box;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+.list-jurusan {
+    display: none;
+}
 /* topnav buat mobile */
 /* Add a black background color to the top navigation */
 .topnav {
@@ -187,7 +201,7 @@ body::before {
     position: absolute;
     left: 100%;
     top: 54.5%;
-    width: 200px;
+    width: 280px;
   }.dropdown-container.two {
     display: none;
     background-color: #000000cc;
@@ -416,6 +430,183 @@ body::before {
     text-decoration: underline;
 }
 /* end perpus */
+
+/* jurusan */
+
+/* Rpl */
+.foto-rpl {
+    height: 300px;
+    background-image: url(img/jurusan-rpl1.JPG);
+    width: 100%;
+    background-position-y: -120px;
+    background-size: cover;
+}
+.tentang-rpl {
+    background-color: white;
+    padding: 1% 2%;
+}
+.tentang-rpl p {
+    font-size: 18px;
+    text-align: justify;
+    line-height: 25px;
+}
+.tentang-rpl li {
+    font-size: 18px;
+    text-align: justify;
+    margin-bottom: 10px;
+    line-height: 25px;
+}
+.tentang-rpl span {
+    font-weight: bold;
+}
+.rpl-img {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 10px 0;
+    border-top: 5px double rgb(73, 73, 73);
+    border-bottom: 5px double rgb(73, 73, 73);
+}
+.img-jurusanrpl1, .img-jurusanrpl2, .img-jurusanrpl3,
+.img-jurusanrpl4, .img-jurusanrpl5, .img-jurusanrpl6, 
+.img-jurusanrpl7 {
+    width: 48%;
+    margin: .5%;
+    overflow: hidden;
+}
+.rpl-img img {
+    width: 100%;
+    border: 1px solid gray;
+    transition: .3s;
+}
+.img-jurusanrpl1:hover img, 
+.img-jurusanrpl2:hover img, 
+.img-jurusanrpl3:hover img, 
+.img-jurusanrpl4:hover img, 
+.img-jurusanrpl5:hover img, 
+.img-jurusanrpl6:hover img, 
+.img-jurusanrpl7:hover img {
+    transform: scale(1.1);
+    transition: .5s;
+}
+/* end RPL */
+
+/* otkp */
+.foto-otkp {
+    height: 300px;
+    background-image: url(img/jurusan-otkp.jpg);
+    width: 100%;
+    background-position-y: -120px;
+    background-size: cover;
+}
+.tentang-otkp {
+    background-color: white;
+    padding: 3% 2%;
+}
+.tentang-otkp h2 {
+    margin: 0;
+}
+.tentang-otkp p {
+    font-size: 18px;
+    text-align: justify;
+    line-height: 25px;
+}
+.tentang-otkp li {
+    font-size: 18px;
+    text-align: justify;
+    margin-bottom: 10px;
+    line-height: 25px;
+}
+.tentang-otkp span {
+    font-weight: bold;
+}
+.otkp-img {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 10px 0;
+    border-top: 5px double rgb(73, 73, 73);
+    border-bottom: 5px double rgb(73, 73, 73);
+}
+.img-otkp1, .img-otkp2, .img-otkp3, .img-otkp4 {
+    width: 48%;
+    margin: .5%;
+    overflow: hidden;
+}
+.otkp-img img {
+    width: 100%;
+    border: 1px solid gray;
+    transition: .3s;
+}
+.img-otkp1:hover img, 
+.img-otkp2:hover img, 
+.img-otkp3:hover img, 
+.img-otkp4:hover img {
+    transform: scale(1.1);
+    transition: .5s;
+}
+/* end otkp */
+.tentang-tkj p {
+    font-size: 18px;
+    text-align: justify;
+    line-height: 25px;
+}
+.tentang-tkj li {
+    font-size: 18px;
+    text-align: justify;
+    margin-bottom: 10px;
+    line-height: 25px;
+}
+.tentang-tkj span {
+    font-weight: bold;
+}
+
+/* tkj */
+.foto-tkj {
+    height: 300px;
+    background-image: url(img/jurusan-tkj.jpg);
+    width: 100%;
+    background-position-y: -190px;
+    background-size: cover;
+}
+.tentang-tkj {
+    background-color: white;
+    padding: 3% 2%;
+}
+
+.tentang-tkj h2 {
+    margin: 0;
+}
+.tkj-img {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 10px 0;
+    border-top: 5px double rgb(73, 73, 73);
+    border-bottom: 5px double rgb(73, 73, 73);
+}
+.img-tkj, .img-tkj1, .img-tkj2, .img-tkj3, .img-tkj4, 
+.img-tkj5, .img-tkj6, .img-tkj7 {
+    width: 48%;
+    margin: .5%;
+    overflow: hidden;
+}
+.tkj-img img {
+    width: 100%;
+    border: 1px solid gray;
+    transition: .3s;
+}
+.img-tkj:hover img,
+.img-tkj1:hover img, 
+.img-tkj2:hover img, 
+.img-tkj3:hover img, 
+.img-tkj4:hover img,
+.img-tkj5:hover img, 
+.img-tkj6:hover img, 
+.img-tkj7:hover img {
+    transform: scale(1.1);
+    transition: .5s;
+}
+/* end tkj */
+
+/* end jurusan */
 /* contact */
 .contact {
     width: 100%;
@@ -541,6 +732,21 @@ footer p {
 
 /* responsive */
 @media (max-width: 1000px) {
+    /* list jurusan */
+    .list-jurusan {
+        background-color: white;
+        margin-top: 50px;
+        padding: 20px;
+        padding-top: 50px;
+        display: block;
+    }
+    .list-jurusan a {
+        color: black;
+    }
+    .list-jurusan ul li {
+        margin-bottom: 10px;
+    }
+    /* end list jurusan */
     .topnav {
         display: block;
     }
@@ -568,11 +774,14 @@ footer p {
         box-sizing: border-box;
     }
     .sejarah p, .sejarah ul li, .matrikulasi p, 
-    .kantin p, .perpus p, .perpus li, .perpus a {
+    .kantin p, .perpus p, .perpus li, .perpus a, 
+    .tentang-rpl p, .tentang-rpl ol li, .tentang-otkp p, 
+    .tentang-otkp ol li, .tentang-tkj p, .tentang-tkj ol li {
         font-size: 14px;
         text-align: left;
     }
-    .sejarah h2, .matrikulasi h2, .kantin h2, .perpus h2 {
+    .sejarah h2, .matrikulasi h2, .kantin h2, .perpus h2, 
+    .tentang-rpl h2, .tentang-otkp h2, .tentang-tkj h2 {
         text-align: center;
     }
     .matrikulasi .matrikulasi-img img {
@@ -602,6 +811,18 @@ footer p {
         background-position-y: 0;
         background-position-x: 0;
         margin-top: 50px;
+    }
+    .foto-rpl {
+        background-position-y: 0;
+    }
+    .foto-otkp {
+        margin-top: 50px;
+        background-position-y: 0;
+        background-position-x: -100px;
+    }
+    .foto-tkj {
+        margin-top: 50px;
+        background-position-y: 0;
     }
     /* contact */
     .contact {
