--- a/style.css
+++ b/style.css
@@ -890,6 +890,9 @@ footer p {
     .contact {
         width: 100%;
     }
+    .twbr {
+        display: none;
+    }
     .pesan {
         background-color: rgba(255, 255, 255, 1);
         height: 750px;
